@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.8 2004/05/10 16:47:15 minskim Exp $
+$NetBSD: distinfo,v 1.9 2004/05/14 15:01:31 minskim Exp $
 
-SHA1 (mathomatic-11.1/mathomatic-11.1.tgz) = 7d5a52ffb607d39ed429a2925f756fb72966fee2
-Size (mathomatic-11.1/mathomatic-11.1.tgz) = 119337 bytes
+SHA1 (mathomatic-11.1b.tgz) = e2a4e871d7f8b66c82c259d08c9315694d7b24c3
+Size (mathomatic-11.1b.tgz) = 127668 bytes
 SHA1 (patch-aa) = f2b0919ad4ce62172e8719218c6e295bee248aaf
